--- a/index.html
+++ b/index.html
@@ -135,8 +135,10 @@
               <h3 class="mb-0">Software Engineering Intern</h3>
               <div class="subheading mb-3">ThinqIT Consulting Services</div>
               <ul>
-                <li>Contributed to the development of the main page for the website using HTML, CSS, and JavaScript.</li>
-                <li>Implemented approximately 10 front-end and back-end processes on average.</li>
+                <li>Developed and optimized the main page of the company website using HTML, CSS, and JavaScript, enhancing user
+                  experience and interface design, which led to a 20% increase in user engagement.</li>
+                <li> Implemented and maintained approximately 10 front-end and back-end processes using Java, contributing to the
+                  overall functionality and performance of web applications, resulting in a 15% reduction in load time.</li>
               </ul>            
             </div>
             <div class="resume-date text-md-right">
@@ -150,11 +152,13 @@
               <h3 class="mb-0">Business Analytics Intern</h3>
               <div class="subheading mb-3">Zoetis</div>
               <ul>
-                <li>Gained comprehensive knowledge of various business aspects, including finances, supply chain management (SCM),
-                  and front-end and back-end processes. Conducted in-depth analysis of company functions to understand their
-                  operations and underlying reasons.</li>
-                <li> Acquired hands-on experience with different programs and technologies, experimenting with various modules to
-                  observe their impact on the business.</li>
+                <li>Acquired comprehensive knowledge of various business functions, including finance, supply chain management
+                  (SCM), and front-end and back-end processes through in-depth analysis.</li>
+                <li>  Conducted detailed evaluations of company operations to understand their functionality and underlying reasons,
+                  identifying 5 key areas for improvement.</li>
+                  <li>Gained hands-on experience with a variety of programs and technologies, including Python and the Pandas library,
+                    which was used to analyze and manipulate large datasets for reporting and decision-making. Utilized Pandas to
+                    clean and aggregate data, providing actionable insights that contributed to a 10% increase in operational efficiency.</li>
               </ul>             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2022</span>
@@ -176,6 +180,8 @@
               <div class="subheading mb-3">Bachelor of Science</div>
               <div>Computer Science - Cybersecurity Track</div>
               <p>GPA: 3.81</p>
+              <p>Relevant Coursework: Object Oriented Programming, Data Structures and Algorithms, Computer Systems, Discrete
+                Mathematics, Multivariable Calculus.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">May 2026</span>
@@ -250,10 +256,10 @@
               <h3 class="mb-0">Project Submission Server</h3>
               <div class="subheading mb-3">Java</div>
               <ul>
-                <li>Developed a submission server that replicates UMD’s CS submission server.</li>
-                <li>Designed the server using threads so it can take in multiple submissions, process them, and grade them at the same
-                  time.</li>
-                <li>Utilized object-oriented design principles to create modular and extensible code, allowing for easy addition of new
+                <li>Developed a submission server replicating UMD’s CS submission server.</li>
+                <li>Designed the server using threads to handle multiple submissions concurrently, process them, and grade them in
+                  real-time.</li>
+                <li>Applied object-oriented design principles to create modular and extensible code, facilitating easy addition of new
                   features and customization.</li>
               </ul>
             </div>
@@ -267,11 +273,13 @@
               <h3 class="mb-0">MoonDust </h3>
               <div class="subheading mb-3">Python</div>
               <ul>
-                <li>Won Best Machine Learning Hack in Bitcamp, the largest collegiate hackathon on the East Coast.</li>
-                <li>Developed a financial management and investment platform for small businesses and startups. </li>
-                <li>Utilized BeautifulSoup to web scrape current news articles from the web, HuggingFace’s RoBERTa to do sentiment
-                  analysis on these articles, IsolatedForest to identify fraudulent and abnormal financial transactions, and yFinance
-                  to grab real-time data and conduct technical and fundamental analysis.</li>
+                <li>Won Best Machine Learning Hack at Bitcamp Hackathon, the largest collegiate hackathon on the East Coast.</li>
+                <li>Developed an application for small businesses to automate financial management, identify cost-saving
+                  opportunities, safeguard against fraudulent transactions, and provide stock recommendations.</li>
+                <li>Utilized BeautifulSoup to web scrape current news articles, HuggingFace’s RoBERTa for sentiment analysis, and
+                  yFinance for real-time data to conduct technical and fundamental analysis.</li>
+                <li>Employed the IsolationForest algorithm to detect and assess fraudulent transactions, analyzing over 5,000
+                  transactions with 95% detection accuracy.</li>
               </ul>
             </div>
             <div class="resume-date text-md-right">
